Fix button colors in dark mode
Closes #14

--- a/src/app/pages/collections/collections.page.scss
+++ b/src/app/pages/collections/collections.page.scss
@@ -1,3 +1,6 @@
 .main-toolbar {
   --background: var(--main-toolbar-background);
+  ion-button {
+    color: var(--fixed-light)
+  }
 }
